--- a/notification-service/.env
+++ b/notification-service/.env
@@ -1,5 +1,5 @@
 PORT=3004
 MONGO_URI=mongodb://localhost:27017/notifications
 JWT_SECRET=guada123
-EMAIL_USER=tp2redesagv@gmail.com
-EMAIL_PASS=jdvxmfyrgjtinrgs
+NOTIF_EMAIL=tp2redesagv@gmail.com
+NOTIF_PASSWORD=jdvxmfyrgjtinrgs
